[metadata]
name = brokkr
version = attr: brokkr.__version__
author = C.A.M. Gerlach/UAH HAMMA group
author_email = CAM.Gerlach@Gerlach.CAM
description = A client for data ingest/logging/uplink, remote management and autonomous and central control of scientific IoT sensors as part of the Mjolnir system.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = iot lightning sensor remote control research m2m raspberry pi
url = https://github.com/project-mjolnir/brokkr
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Physics
    Topic :: System :: Monitoring
    Topic :: System :: Networking :: Monitoring :: Hardware Watchdog

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6
install_requires =
    packaging
    serviceinstaller >= 0.1.3; sys_platform == 'linux'
    simpleeval
    toml

[options.extras_require]
all =
    Adafruit-Blinka
    adafruit-circuitpython-busdevice
    gpiozero
    pymodbus
    pyserial
    RPi.GPIO
    smbus2

adafruit =
    Adafruit-Blinka
    adafruit-circuitpython-busdevice

gpio =
    gpiozero
    RPi.GPIO

modbus =
    pymodbus
    pyserial

smbus =
    smbus2

[options.entry_points]
console_scripts =
    brokkr = brokkr.__main__:main

[options.packages.find]
where = src
