[metadata]
name = brokkr
version = attr: brokkr.__version__
description = A client for data ingest/logging/uplink, remote management and autonomous and central control of scientific IoT sensors as part of the Mjolnir system.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/project-mjolnir/brokkr
author = C.A.M. Gerlach/UAH HAMMA group
author_email = CAM.Gerlach@Gerlach.CAM
license = MIT
license_files =
    LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Physics
    Topic :: System :: Monitoring
    Topic :: System :: Networking :: Monitoring :: Hardware Watchdog
keywords = iot lightning sensor remote control research m2m raspberry pi rpi
project_urls =
    Live Demo = https://hamma.dev/
    Repository = https://github.com/project-mjolnir/brokkr
    Documentation = https://github.com/project-mjolnir/brokkr#readme
    Changelog = https://github.com/project-mjolnir/brokkr/blob/master/CHANGELOG.md
    Issue Tracker = https://github.com/project-mjolnir/brokkr/issues

[options]
packages = find:
install_requires =
    packaging>=17
    serviceinstaller>=0.2.0;sys_platform == 'linux'
    simpleeval>=0.9.11
    tomli>=1.1
    tomli-w>=0.4
python_requires = >=3.6
include_package_data = True
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    brokkr = brokkr.__main__:main

[options.extras_require]
all =
    Adafruit-Blinka
    adafruit-circuitpython-busdevice
    gpiozero
    pymodbus
    pyserial
    RPi.GPIO
    smbus2
adafruit =
    Adafruit-Blinka
    adafruit-circuitpython-busdevice
gpio =
    gpiozero
    RPi.GPIO
modbus =
    pymodbus
    pyserial
smbus =
    smbus2
